avance con scrollview

--- a/app/src/main/res/layout/activity_gestion_usuarios.xml
+++ b/app/src/main/res/layout/activity_gestion_usuarios.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<AbsoluteLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GestionUsuarios"
@@ -13,6 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_x="129dp"
+        android:layout_y="6dp"
         android:text="Gestión Usuarios"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -24,6 +31,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="24dp"
+        android:layout_y="77dp"
         android:text="Cedula:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -33,6 +42,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="17dp"
+        android:layout_y="139dp"
         android:text="Nombre:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -42,6 +53,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="21dp"
+        android:layout_y="193dp"
         android:text="Apellido:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -51,6 +64,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="19dp"
+        android:layout_y="240dp"
         android:text="Facultad:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -60,6 +75,8 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="26dp"
+        android:layout_y="295dp"
         android:text="Sede:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -69,6 +86,8 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="29dp"
+        android:layout_y="424dp"
         android:text="Rol:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -78,6 +97,8 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="11dp"
+        android:layout_y="542dp"
         android:text="Contraseña:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -87,6 +108,8 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="20dp"
+        android:layout_y="479dp"
         android:text="Usuario:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -96,6 +119,8 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="23dp"
+        android:layout_y="601dp"
         android:text="Estado:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -105,6 +130,8 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_x="15dp"
+        android:layout_y="360dp"
         android:text="Programa:"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="33dp"
@@ -112,14 +139,17 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
+        android:layout_width="236dp"
+        android:layout_height="53dp"
         android:layout_marginStart="34dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="6dp"
+        android:layout_x="124dp"
+        android:layout_y="53dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="example: 10068687"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +164,8 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="6dp"
+        android:layout_x="127dp"
+        android:layout_y="114dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -150,6 +182,8 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="6dp"
+        android:layout_x="124dp"
+        android:layout_y="229dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -166,6 +200,8 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="12dp"
+        android:layout_x="125dp"
+        android:layout_y="170dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -181,6 +217,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="12dp"
+        android:layout_x="126dp"
+        android:layout_y="339dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -194,6 +232,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="10dp"
+        android:layout_x="129dp"
+        android:layout_y="464dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -203,12 +243,14 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="246dp"
+        android:layout_width="235dp"
         android:layout_height="28dp"
         android:layout_marginStart="46dp"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="51dp"
         android:layout_marginBottom="14dp"
+        android:layout_x="122dp"
+        android:layout_y="292dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -217,20 +259,24 @@
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="246dp"
+        android:layout_width="227dp"
         android:layout_height="28dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="12dp"
+        android:layout_x="124dp"
+        android:layout_y="594dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
         tools:layout_editor_absoluteX="114dp" />
 
     <Spinner
         android:id="@+id/spinner3"
-        android:layout_width="246dp"
+        android:layout_width="238dp"
         android:layout_height="28dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="41dp"
+        android:layout_x="127dp"
+        android:layout_y="413dp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         tools:layout_editor_absoluteX="114dp" />
@@ -241,6 +287,8 @@
         android:layout_height="48dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="7dp"
+        android:layout_x="127dp"
+        android:layout_y="524dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/spinner3"
@@ -253,6 +301,8 @@
         android:layout_height="49dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="11dp"
+        android:layout_x="58dp"
+        android:layout_y="653dp"
         android:text="Guardar Usuario"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -265,6 +315,8 @@
         android:layout_height="49dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="16dp"
+        android:layout_x="56dp"
+        android:layout_y="717dp"
         android:text="Consultar Usuario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -277,9 +329,12 @@
         android:layout_height="49dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
+        android:layout_x="55dp"
+        android:layout_y="778dp"
         android:text="Modificar Usuario"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</AbsoluteLayout></ScrollView>
