--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,18 @@
         android:id="@+id/imageView"
         android:layout_width="489dp"
         android:layout_height="602dp"
-        android:layout_marginStart="4dp"
         android:background="#6189FF00"
         android:rotation="116"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.705"
+        app:layout_constraintVertical_bias="0.395"
         app:srcCompat="?android:attr/autofilledHighlight" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gestión"
@@ -39,40 +41,53 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="20dp"
         android:text="Administrador"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="179dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.288" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="352dp"
         android:layout_height="88dp"
+        android:layout_marginTop="64dp"
         android:backgroundTint="#009688"
         android:text="USUARIOS"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="226dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="31dp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="352dp"
         android:layout_height="88dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#009688"
         android:text="CAFETERÍAS"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="335dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="31dp" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="352dp"
         android:layout_height="88dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#009688"
         android:text="NOVEDADES"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="449dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        tools:layout_editor_absoluteX="31dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
