--- a/app/src/main/res/layout/activity_gestion_usuarios.xml
+++ b/app/src/main/res/layout/activity_gestion_usuarios.xml
@@ -182,8 +182,8 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="6dp"
-        android:layout_x="124dp"
-        android:layout_y="229dp"
+        android:layout_x="126dp"
+        android:layout_y="170dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -200,8 +200,8 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="12dp"
-        android:layout_x="125dp"
-        android:layout_y="170dp"
+        android:layout_x="122dp"
+        android:layout_y="227dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="14sp"
@@ -331,7 +331,7 @@
         android:layout_marginBottom="10dp"
         android:layout_x="55dp"
         android:layout_y="778dp"
-        android:text="Modificar Usuario"
+        android:text="Crear Base"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
