avance con SQLite 2

--- a/app/src/main/res/layout/activity_gestion_usuarios.xml
+++ b/app/src/main/res/layout/activity_gestion_usuarios.xml
@@ -331,7 +331,7 @@
         android:layout_marginBottom="10dp"
         android:layout_x="55dp"
         android:layout_y="778dp"
-        android:text="Modificar Usuario"
+        android:text="Crear Base"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
